force-app/main/default/objects/Knowledge_Pair_Evaluation__c/Knowledge_Pair_Evaluation__c.object-meta.xml
<CustomObject>
    <description>Caching layer to prevent redundant LLM calls for previously checked article version pairs.</description>
    <label>Knowledge Pair Evaluation</label>
    <nameField>
        <displayFormat>KPE-{0000}</displayFormat>
        <label>Evaluation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Knowledge Pair Evaluations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>