force-app/main/default/objects/Knowledge_Pair_Evaluation__c/fields/Composite_Version_Key__c.field-meta.xml
<CustomField>
    <fullName>Composite_Version_Key__c</fullName>
    <description>Alphabetically sorted pair of KnowledgeArticleVersionIds joined by underscore. Used as a unique lookup key.</description>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Composite Version Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>