force-app/main/default/objects/Knowledge_Pair_Evaluation__c/fields/Evaluated_Date__c.field-meta.xml
<CustomField>
    <fullName>Evaluated_Date__c</fullName>
    <description>Timestamp of when this pair was last evaluated by the LLM.</description>
    <label>Evaluated Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>