force-app/main/default/objects/Knowledge_Pair_Evaluation__c/fields/Evaluation_Domain__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Domain__c</fullName>
    <label>Evaluation Domain</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pipeline</fullName>
            </value>
            <value>
                <fullName>Governance</fullName>
                <default>true</default>
                <label>Governance</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>