force-app/main/default/objects/Knowledge_Pair_Evaluation__c/fields/Evaluation_Status__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Status__c</fullName>
    <description>Result of the LLM evaluation for this article pair.</description>
    <label>Evaluation Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clear</fullName>
            </value>
            <value>
                <fullName>Flagged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>