force-app/main/default/objects/Knowledge_Pair_Evaluation__c/fields/Pipeline_Run__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Run__c</fullName>
    <description>Pipeline run that produced this evaluation.</description>
    <label>Pipeline Run</label>
    <referenceTo>KB_Pipeline_Run__c</referenceTo>
    <relationshipLabel>Pair Evaluations</relationshipLabel>
    <relationshipName>Pipeline_Pair_Evaluations</relationshipName>
    <type>Lookup</type>
</CustomField>