force-app/main/default/objects/Knowledge_Pair_Evaluation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Composite_Version_Key__c</columns>
    <columns>Evaluation_Status__c</columns>
    <columns>Evaluated_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>